--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -19,7 +19,7 @@
     </Page.Resources>
 
     <Grid x:Name="MainGrid" Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
-        <Grid x:Name="ChildGrid" Visibility="{Binding CurrentPost, Converter={StaticResource NullVisibilityConverter}}" Background="Aqua" Margin="20,10,20,10">
+        <Grid x:Name="ChildGrid" Visibility="{Binding CurrentPost, Converter={StaticResource NullVisibilityConverter}}" Margin="20,10,20,10">
             <Grid.RenderTransform>
                 <TranslateTransform X="0" />
             </Grid.RenderTransform>
@@ -65,9 +65,9 @@
                     <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentPost.Author}" Height="22" VerticalAlignment="Top"/>
                 </StackPanel>
 
-                <Border x:Name="Row4Piece" Grid.Column="1" Grid.Row="4" Background="Beige" BorderBrush="Pink">
+                <Border x:Name="Row4Piece" Margin="0,10,0,15" Grid.Column="1" Grid.Row="4" Background="LightGray" BorderBrush="Pink">
                     <ScrollViewer Visibility="{Binding CurrentPost.HasSelfText, Converter={StaticResource VisibilityConverter}}" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="300">
-                        <TextBlock TextWrapping="Wrap" Margin="0,10,15,15" Style="{StaticResource BasicTextStyle}" Text="{Binding CurrentPost.SelfText}"/>
+                        <TextBlock TextWrapping="Wrap" Margin="10,10,10,15" Style="{StaticResource BasicTextStyle}" Text="{Binding CurrentPost.SelfText}"/>
                     </ScrollViewer>
                 </Border>
             </Grid>
