Webview working now, including webviewbrush.

--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -37,6 +37,14 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
+
+                <WebView Grid.Row="0" Grid.ColumnSpan="2" Source="{Binding CurrentPost.Link}"  x:Name="WebView" Visibility="Visible" />
+                <Rectangle Grid.Row="0" x:Name="WebViewRect" Grid.ColumnSpan="2" Visibility="Collapsed">
+                    <Rectangle.Fill>
+                        <WebViewBrush x:Name="WebViewBrush" SourceName="WebView"/>
+                    </Rectangle.Fill>
+                </Rectangle>
+                
                 <Border Grid.Row="1" x:Name="Row1Piece2">
                     <fusao:RotateButton  Visibility="{Binding CurrentPost.IsSelf,Converter={StaticResource InverseVisibilityConverter}}" Margin="0,10,15,0" Command="{Binding CurrentPost.ChangeView}" IsRotated="{Binding CurrentPost.IsShowingComments}" IsVertical="True"/>
                 </Border>
