--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -46,7 +46,7 @@
                 </Rectangle>
                 
                 <Border Grid.Row="1" x:Name="Row1Piece2">
-                    <fusao:RotateButton  Visibility="{Binding CurrentPost.IsSelf,Converter={StaticResource InverseVisibilityConverter}}" Margin="0,10,15,0" Command="{Binding CurrentPost.ChangeView}" IsRotated="{Binding CurrentPost.IsShowingComments}" IsVertical="True"/>
+                    <fusao:RotateButton  Visibility="{Binding CurrentPost.IsSelf,Converter={StaticResource InverseVisibilityConverter}}" Margin="0,10,15,0" Command="{Binding ChangeView}" IsRotated="{Binding IsShowingComments}" IsVertical="True"/>
                 </Border>
 
                 <TextBlock Margin="0,10,0,0" x:Name="Row1Piece1" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" TextWrapping="Wrap" Text="{Binding CurrentPost.Title}" Style="{StaticResource SubheaderTextStyle}" FontSize="30" Padding="0, 0" />
