--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -3,10 +3,10 @@
     x:Class="RedditStoreApp.Views.PostHeader"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:lctrls="using:RedditStoreApp.Controls"
     xmlns:local="using:RedditStoreApp.Views"
     xmlns:fusao="using:Fusao.Controls"
     xmlns:converters="using:RedditStoreApp.Views.Converters"
+    xmlns:selectors="using:RedditStoreApp.Views.Selectors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -22,7 +22,7 @@
         <DataTemplate x:Key="StandardCommentTemplate">
             <Grid Background="White">
                 <Border BorderBrush="{StaticResource ReplyHighlightBrush}" BorderThickness="4,0,0,0" Margin="{Binding IndentLevel,Converter={StaticResource IndentThicknessConverter}}">
-                    <Grid Background="White" Margin="15,5,15,5">
+                    <Grid Background="White" Margin="15,0,15,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
@@ -32,7 +32,9 @@
                         </Grid.RowDefinitions>
                         <TextBlock Grid.Row="1" Margin="0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Body}" />
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
+                            <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
+                            <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>                            
+                            <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
                             <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
                             <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
                             <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="&#xE110;" RenderTransformOrigin="0.5,0.5" Foreground="{StaticResource DownvoteBrush}">
@@ -42,18 +44,36 @@
                             </TextBlock>
                         </StackPanel>
                         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
-                            <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
-                            <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
+
                         </StackPanel>
-                        <!--<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                        <fusao:ApproximateDateBlock Width="180" TextAlignment="Right" Margin="2,0,0,0" Style="{StaticResource BasicDateTextStyle}" FontSize="14" Date="{Binding Created}" />
-                        <TextBlock Style="{StaticResource BasicTextStyle}" FontSize="14" Text=" via " />
-                        <TextBlock Margin="5,0,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding Domain}"/>
-                    </StackPanel>-->
                     </Grid>
                 </Border>
             </Grid>
         </DataTemplate>
+
+        <DataTemplate x:Key="MoreCommentTemplate">
+            <Grid Background="White">
+                <Border BorderBrush="{StaticResource ReplyHighlightBrush}" BorderThickness="4,0,0,0" Margin="{Binding IndentLevel,Converter={StaticResource IndentThicknessConverter}}">
+                    <Grid Background="White" Margin="15,0,15,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel Grid.Row="0" Orientation="Horizontal">
+                            <Button Command="{Binding LoadMore}" Background="Transparent" Margin="0" Padding="0">
+                                <Button.Content>
+                                    <TextBlock Margin="0,10,0,10" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="Load More Comments..." />
+                                </Button.Content>
+                            </Button>
+                        </StackPanel>
+                    </Grid>
+                </Border>
+            </Grid>
+        </DataTemplate>
+
+        <selectors:CommentSelector x:Name="CommentSelector" MoreTemplate="{StaticResource MoreCommentTemplate}" StandardTemplate="{StaticResource StandardCommentTemplate}"/>
     </Page.Resources>
 
     <Grid x:Name="MainGrid" Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
@@ -118,7 +138,7 @@
                 </Border>
 
                 <Border Grid.ColumnSpan="2" Grid.Row="5">
-                    <ListView ItemsSource="{Binding CurrentPost.Comments}" ItemTemplate="{StaticResource StandardCommentTemplate}" SelectionMode="None" IsItemClickEnabled="True">
+                    <ListView VirtualizingStackPanel.VirtualizationMode="Recycling" ItemsSource="{Binding CurrentPost.Comments}" ItemTemplateSelector="{StaticResource CommentSelector}" SelectionMode="None" IsItemClickEnabled="True">
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
                                 <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
