--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -18,7 +18,7 @@
         <converters:VisibilityConverter x:Name="InverseVisibilityConverter" IsInverse="True"/>
         <converters:NullVisibilityConverter x:Name="NullVisibilityConverter"/>
         <converters:IndentThicknessConverter x:Name="IndentThicknessConverter"/>
-        
+
         <DataTemplate x:Key="StandardCommentTemplate">
             <Grid Background="White">
                 <Border BorderBrush="{StaticResource ReplyHighlightBrush}" BorderThickness="4,0,0,0" Margin="{Binding IndentLevel,Converter={StaticResource IndentThicknessConverter}}">
@@ -33,7 +33,7 @@
                         <TextBlock Grid.Row="1" Margin="0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Body}" />
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
                             <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
-                            <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>                            
+                            <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
                             <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
                             <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
                             <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
@@ -137,18 +137,14 @@
                     </ScrollViewer>
                 </Border>
 
-                <Border Grid.ColumnSpan="2" Grid.Row="5">
-                    <ListView VirtualizingStackPanel.VirtualizationMode="Recycling" ItemsSource="{Binding CurrentPost.Comments}" ItemTemplateSelector="{StaticResource CommentSelector}" SelectionMode="None" IsItemClickEnabled="True">
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem">
-                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                            </Style>
-                        </ListView.ItemContainerStyle>
-                    </ListView>
-                </Border>
+                <ListView x:Name="Row5Piece" Grid.ColumnSpan="2" Grid.Row="5" ItemsSource="{Binding CurrentPost.Comments}" ItemTemplateSelector="{StaticResource CommentSelector}" SelectionMode="None" IsItemClickEnabled="True">
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
             </Grid>
-
-
         </Grid>
     </Grid>
 </Page>
