--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -61,12 +61,9 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <StackPanel Grid.Row="0" Orientation="Horizontal">
-                            <Button Command="{Binding LoadMore}" Background="Transparent" Margin="0" Padding="0">
-                                <Button.Content>
-                                    <TextBlock Margin="0,10,0,10" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="Load More Comments..." />
-                                </Button.Content>
-                            </Button>
+                        <StackPanel Grid.Row="0" Tapped="OnStackPanelTapped" Orientation="Horizontal">
+                            <TextBlock Margin="0,10,10,10" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CommandText}" />
+                            <ProgressRing IsActive="{Binding IsInProgress}" />
                         </StackPanel>
                     </Grid>
                 </Border>
