--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -4,6 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RedditStoreApp.Views"
+    xmlns:helpers="using:RedditStoreApp.Helpers"
     xmlns:fusao="using:Fusao.Controls"
     xmlns:converters="using:RedditStoreApp.Views.Converters"
     xmlns:selectors="using:RedditStoreApp.Views.Selectors"
@@ -30,7 +31,8 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="1" Margin="0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Body}" />
+
+                        <RichTextBlock helpers:HtmlToRtfConverter.Html="{Binding Body}" Grid.Row="1" Margin="0" FontSize="14" />
                         <StackPanel Grid.Row="0" Orientation="Horizontal">
                             <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
                             <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding Author}"/>
