--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -109,7 +109,7 @@
                     <TextBlock Margin="5,0,5,0" Style="{StaticResource BasicTextStyle}" FontSize="14" FontWeight="Bold" Text="{Binding CurrentPost.Domain}"/>
                 </StackPanel>
 
-                <StackPanel x:Name="Row3Piece" Grid.Column="1" Grid.Row="3" Orientation="Horizontal">
+                <StackPanel VerticalAlignment="Center" x:Name="Row3Piece" Grid.Column="1" Grid.Row="3" Orientation="Horizontal">
                     <TextBlock Margin="0,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentPost.Upvotes}" Foreground="{StaticResource UpvoteBrush}"/>
                     <TextBlock Margin="0,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="14" Foreground="{StaticResource UpvoteBrush}" Text="&#xE110;" />
                     <TextBlock Margin="15,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentPost.Downvotes}" Foreground="{StaticResource DownvoteBrush}"/>
@@ -124,7 +124,11 @@
                     <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
                     <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentPost.Author}" Height="22" VerticalAlignment="Top"/>
                 </StackPanel>
-
+                <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
+                    <Button Margin="5,0,5,0" Style="{StaticResource ReplyButtonStyle}" />
+                    <Button Margin="5,0,5,0" Style="{StaticResource UpvoteButtonStyle}" />
+                    <Button Margin="5,0,5,0" Style="{StaticResource DownvoteButtonStyle}" />
+                </StackPanel>
                 <Border x:Name="Row4Piece" Margin="0,10,0,15" Grid.Column="1" Grid.Row="4" Background="LightGray" BorderBrush="Pink">
                     <ScrollViewer Visibility="{Binding CurrentPost.HasSelfText, Converter={StaticResource VisibilityConverter}}" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="300">
                         <TextBlock TextWrapping="Wrap" Margin="10,10,10,15" Style="{StaticResource BasicTextStyle}" Text="{Binding CurrentPost.SelfText}"/>
