--- a/RedditStoreApp/Views/PostHeader.xaml
+++ b/RedditStoreApp/Views/PostHeader.xaml
@@ -49,9 +49,7 @@
                             </StackPanel>
                         </Grid>
                         <StackPanel VerticalAlignment="Top" Orientation="Horizontal" HorizontalAlignment="Right" Visibility="{Binding IsSelected, Converter={StaticResource VisibilityConverter}}">
-                            <Button Margin="5,10,5,0" Command="{Binding AddComment}" Style="{StaticResource ReplyButtonStyle}"  />
-                            <Button Margin="5,10,5,0" Command="{Binding Upvote}" Style="{StaticResource UpvoteButtonStyle}" />
-                            <Button Margin="5,10,5,0" Command="{Binding Downvote}" Style="{StaticResource DownvoteButtonStyle}" />
+                            <fusao:RedditVoteComment VerticalAlignment="Top" HorizontalAlignment="Right" />
                         </StackPanel>
                     </Grid>
                 </Border>
@@ -79,7 +77,7 @@
 
         <DataTemplate x:Key="NewCommentTemplate">
             <Grid Background="White" Height="200">
-                 <Border BorderBrush="{StaticResource ReplyHighlightBrush}" BorderThickness="4,0,0,0" Margin="{Binding IndentLevel,Converter={StaticResource IndentThicknessConverter}}">
+                <Border BorderBrush="{StaticResource ReplyHighlightBrush}" BorderThickness="4,0,0,0" Margin="{Binding IndentLevel,Converter={StaticResource IndentThicknessConverter}}">
                     <Grid Background="White" Margin="15,0,15,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -96,7 +94,7 @@
                             <Button Command="{Binding Post}" Content="Post" />
                         </StackPanel>
                     </Grid>
-                </Border>               
+                </Border>
             </Grid>
         </DataTemplate>
 
@@ -152,11 +150,14 @@
                     <TextBlock Margin="40,10,0,0" FontFamily="Segoe UI Symbol" Style="{StaticResource BasicTextStyle}" FontSize="16" Text="&#xE13D;"/>
                     <TextBlock Margin="2,10,0,0" Style="{StaticResource BasicTextStyle}" FontSize="14" Text="{Binding CurrentPost.Author}" Height="22" VerticalAlignment="Top"/>
                 </StackPanel>
-                <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button Margin="5,0,5,0" Style="{StaticResource ReplyButtonStyle}" Command="{Binding CurrentPost.AddComment}"/>
-                    <Button Margin="5,0,5,0" Style="{StaticResource UpvoteButtonStyle}" />
-                    <Button Margin="5,0,5,0" Style="{StaticResource DownvoteButtonStyle}" />
-                </StackPanel>
+                <fusao:RedditVoteComment 
+                        Grid.Column="1"
+                        Grid.Row="3"
+                        HorizontalAlignment="Right"
+                        AddComment="{Binding CurrentPost.AddComment}" 
+                        Upvote="{Binding CurrentPost.Upvote}"
+                        Downvote="{Binding CurrentPost.Downvote}"
+                        Liked="{Binding CurrentPost.Likes}" />
                 <Border x:Name="Row4Piece" Margin="0,10,0,15" Grid.Column="1" Grid.Row="4" Background="LightGray" BorderBrush="Pink">
                     <ScrollViewer Visibility="{Binding CurrentPost.HasSelfText, Converter={StaticResource VisibilityConverter}}" ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="300">
                         <TextBlock TextWrapping="Wrap" Margin="10,10,10,15" Style="{StaticResource BasicTextStyle}" Text="{Binding CurrentPost.SelfText}"/>
